fix: Gemini API 404 오류 해결 (모델명 및 ChatClient 설정 수정)
- Gemini 모델명을 'gemini-1.5-flash'로 수정
- OpenAI 호환 base URL의 trailing slash 제거
- Spring AI M5 표준에 맞게 ChatClient.Builder 기반으로 AiService 리팩토링